# BaGuaLu

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MANIFEST.in  Makefile  README.md  README_CN.md  build.bat  build.sh  publish.py  pyproject.toml  upload_pypi.bat  upload_pypi.sh
.github/workflows/: ci.yml  publish.yml
bagualu/: __init__.py  __main__.py
bagualu/agents/: __init__.py  base.py  cluster.py  executor.py  scheduler.py  supervisor.py
bagualu/config/: __init__.py  config_manager.py  providers.py  wizard.py
bagualu/core/: __init__.py  bagualu_core.py  orchestrator.py  resource_manager.py
bagualu/entrypoints/: __init__.py  cli.py  skill_commands.py
bagualu/skills/: __init__.py  enhanced_registry.py  evolver.py  installer.py  registry.py  skill_engine.py  store.py  types.py
bagualu/skills/examples/code-review/: SKILL.md
bagualu/skills/examples/data-analysis/: SKILL.md
bagualu/skills/examples/test-generator/: SKILL.md
bagualu/tools/: __init__.py  base.py
bagualu/utils/: __init__.py  logging.py  ui.py
bagualu/web/: __init__.py  api_server.py  web_ui.py  workflow_ui.py
bagualu/workflow/: __init__.py  workflow_dag.py  workflow_engine.py
bagualu/workflow/nodes/: base.py  builtin.py
docs/: NODES.md
examples/: README.md  README_SAMPLES.md  agent_scheduler.py  agent_supervisor.py  cli_usage.sh  complete_example.py  multi_provider_config.py  simple_cluster.py  skill_evolution.py  skill_management.py  tool_system.py  web_ui_usage.py  workflow_orchestration.py
examples/workflows/: ab-testing-router.json  advanced-code-review.json  api-data-pipeline.json  code-review.json  data-pipeline.json  multi-agent-collaboration.json  test-generation.json
scripts/: check_structure.py  generate_docs.py  test_server.py
tests/: test_core.py  test_web.py  test_web_complete.py  test_web_comprehensive.py
