[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bagualu"
dynamic = ["version"]
description = "八卦炉 - Intelligent Agent Orchestration Platform for Self-Evolving Agent Clusters"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "BaGuaLu Contributors" },
]
keywords = ["ai", "agents", "orchestration", "workflow", "self-evolving", "cluster", "mcp", "llm", "ollama", "openai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
    "mcp>=1.0.0",
    "aiofiles>=24.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "watchfiles>=1.0",
    "tiktoken>=0.8",
    "jsonschema>=4.23",
    "chardet>=5.2",
    "pathspec>=0.12",
    "setproctitle>=1.3",
    "websockets>=14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "litellm>=1.60.0",
    "networkx>=3.0",
    "watchdog>=3.0",
    "click>=8.0",
    "colorama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "build>=1.2",
    "twine>=6.0",
]
web = [
    "gradio>=4.0",
    "dash>=2.14",
    "dash-cytoscape>=0.3",
    "plotly>=5.18",
]

[project.scripts]
bagualu = "bagualu.entrypoints.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/BaGuaLu"
Repository = "https://github.com/cycleuser/BaGuaLu"
Issues = "https://github.com/cycleuser/BaGuaLu/issues"
Documentation = "https://github.com/cycleuser/BaGuaLu#readme"

[tool.setuptools.dynamic]
version = { attr = "bagualu.__version__" }

[tool.setuptools.packages.find]
include = ["bagualu*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]